# ldp-group-assignment-2

./: .gitignore  CMakeLists.txt  README.md
ldp_Assegnamento2/: Binary.cpp  Binary.h  CMakeLists.txt  HighSpeedTrain.cpp  RegionalTrain.cpp  StandardTrack.cpp  StandardTrack.h  Station.cpp  Station.h  StationList.cpp  StationList.h  SuperHighSpeedTrain.cpp  Track.cpp  Track.h  Train.cpp  Train.h  TrainLine.cpp  TrainLine.h  TrainPQ.cpp  TrainPQ.h  TrainTime.cpp  TrainTime.h  TransitTrack.cpp  TransitTrack.h  generics.cpp  generics.h  line_description_2.txt  main.cpp  timetables.txt
ldp_Assegnamento2/include/: StandardTrack.h  Station.h
ldp_Assegnamento2/src/: HighSpeedTrain.cpp  RegionalTrain.cpp  Station.cpp  SuperHighSpeedTrain.cpp  TrainLine.cpp  TrainPQ.cpp  TrainTime.cpp
